--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Change or remove this page</h1>
+        <h1>Very Simple Movie API</h1>
+        <h3>Implemented as an exercise at cphbusiness.dk to demostrate REST API Testing</h3>
     </body>
 </html>
